Update heading text in index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-7 reveal">
                         <p class="text-uppercase mb-3 fw-semibold">QA Engineer • Test Automation </p>
-                        <h1 class="display-6 fw-bold mb-6">Membantu Tim Merilis Produk dengan Lebih Aman dan Percaya Diri</h1>
+                        <h1 class="display-6 fw-bold mb-6">Membantu Tim Merilis Produk dengan Lebih Aman </h1>
                         <p class="lead mb-4">Saya M Sulthan Hariz Shiddiq, seorang QA Engineer yang fokus pada pengujian end-to-end, automasi, dan peningkatan kualitas proses rilis agar bug kritis tertangkap sebelum mencapai pengguna.</p>
                         <div class="d-flex flex-wrap align-items-center mb-4">
                             <span class="badge bg-light text-dark me-2 mb-2">Manual & Exploratory Testing</span>
